# Reserach-agent

./: .replit  README.md  app.py  pyproject.toml  research_reports.db
attached_assets/: Pasted-Prompt-for-Replit-Development-Objective-Develop-a-monthly-triggered-research-agent-app-that-perfor-1747224377017.txt
utils/: database.py  llm_processor.py  report_generator.py  social_media.py  web_scraper.py  web_search.py
